schema/testdata/validation_attribute_sortable_invalid_args/schema.keel
model Publisher { }

model Author {
    fields {
        firstName Text
        surname Text
        publisher Publisher
    }

    operations {
        list listAuthors() {
            @sortable
            @sortable(firstName, publisher)
            @sortable(firstName, firstName)
            @sortable(123)
        }
    }
}